--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="main">
+    <div  role="main" class="main">
         
         <div class="qr">
             <svg width="160" height="160" viewBox="0 0 160 160" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -329,8 +329,12 @@
                 </svg>                
         </div>
         <div class="text">
+            <title>
             <h1 class="text_title">Improve your front-end skills by building projects</h1>
+            </title>
+            <section>
             <h2 class="text_desc">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
+        </section>
         </div>
     </div>
     
